--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>LOJA KAJO</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel=”stylesheet” href=”reset.css”>
+    
+    </head>
+    <body>
+        <body>
+            <header class="cabeçalho">
+            <span class="cabeçalho__menu-modelos"></span>
+            <img src="img/image.png" alt="CANECA">
+            <a href="#""><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#""><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#""><img src="https://www.gov.br/cdn/sso-status-bar/src/image/user.png" alt="Meu perfil"></a>
+            </header>
+            </body>
+    </body>
+</html>
