--- a/loja-online-main/index.html
+++ b/loja-online-main/index.html
@@ -10,15 +10,15 @@
     </head>
     <body>
     <header class="cabeçalho">
-        <div class="container">
-        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-        <a href="#"><img src="img/94633.png"Logo da loja class="container__imagem"></a>
-        </div>
-        <div class=”container”>
-        <a href=”#”><img src="img/4219000.png" Meus favoritos class="container__imagem"></a>
-        <a href=”#”><img src="img/207430.png"Carrinho de compras class="container__imagem"></a>
-        <a href=”#”><img src="img/552721.png"Meu perfil” class="container__imagem"></a>
-        </div>
+    <div class="container">
+    <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+    <img src="loja-online-main/img/94633.png" alt="Logo da Loja" class="container__imagem">
+    </div>
+    <div class="container">
+    <a href="#"><img src="loja-online-main/img/4219000.png" alt="Meus favoritos" class="container__imagem"></a>
+    <a href="#"><img src="loja-online-main/img/207430.png" alt="Carrinho de compras" class="container__imagem"></a>
+    <a href="#"><img src="loja-online-main/img/552721.png" alt="Meu perfil" class="container__imagem"></a>
+    </div>
     </header>
     </body>
 </html>
