--- a/loja-online-main/index.html
+++ b/loja-online-main/index.html
@@ -3,22 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LOJA KAJO</title>
+        <title>LOJA</title>
         <link rel="stylesheet" href="style.css">
         <link rel=”stylesheet” href=”reset.css”>
     
     </head>
     <body>
-    <header class="cabeçalho">
-    <div class="container">
-    <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-    <img src="loja-online-main/img/94633.png" alt="Logo da Loja" class="container__imagem">
-    </div>
-    <div class="container">
-    <a href="#"><img src="loja-online-main/img/4219000.png" alt="Meus favoritos" class="container__imagem"></a>
-    <a href="#"><img src="loja-online-main/img/207430.png" alt="Carrinho de compras" class="container__imagem"></a>
-    <a href="#"><img src="loja-online-main/img/552721.png" alt="Meu perfil" class="container__imagem"></a>
-    </div>
-    </header>
+        <header class="cabeçalho">
+        <div class="container">
+        <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu">
+        <span class="cabeçalho__menu hamburguer container__imagem"></span>
+        </label>
+        <img src="loja-online-main/img/207430.png" alt="Logo da loja" class="container_imagem">
+        </div>
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+        <img src="loja-online-main/img/94633.png" alt="Logo da Loja" class="container__imagem">
+        </div>
+        <div class="container">
+        <a href="#"><img src="loja-online-main/img/4219000.png" alt="Meus favoritos" class="container__imagem"></a>
+        <a href="#"><img src="loja-online-main/img/207430.png" alt="Carrinho de compras" class="container__imagem"></a>
+        <a href="#"><img src="loja-online-main/img/552721.png" alt="Meu perfil" class="container__imagem"></a>
+        </div>
+        </header>
     </body>
 </html>
